# geotaxi-python

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
deployment/: 01-netcfg.yaml  README.md  redeploy.sh
devenv/: entrypoint.sh
geotaxi/: __init__.py  geotaxi.py  jsonschema.py  jsonschema_definition.py  worker.py
scripts/: generate-traffic.py  netstat.py
tests/: test_geotaxi.py
